# bursa

./: Cargo.toml
src/: company_profile.rs  equity.rs  main.rs
src/company_profile/: chart_reading.rs  listed_company.rs  mod.rs
src/equity/: mod.rs  page_info.rs
src/equity/test_asset/: equity_page.html
