[package]
name = "bursa"
version = "0.1.0"
authors = ["Darwin Subramaniam <darwin.subramaniam@keysight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.5.0"
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1.8.4", features = ["full"] }
url = "2.2.0"
chrono = "0.4.19"
pbr = "1"

[dev-dependencies]
tokio-test = "0.4.0"
reqwest = { version = "0.11.0", features = ["blocking","json"] }